--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /PedraPapelTesoura/nbproject/private/
 /PedraPapelTesoura/build/
+/DoWhile/nbproject/private/
+/DoWhile/build/
+/Numeros/nbproject/private/
